--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^4.12.0",
+		"artillery": "^2.0.0-31",
 		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
